Fix build compatibility with JDK 8